opam-version: "2.0"
synopsis: "Xen Vchan implementation"
maintainer: "jonathan.ludlam@eu.citrix.com"
authors: ["Vincent Bernardoff" "Jon Ludlam" "David Scott"]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-vchan"
doc: "https://mirage.github.io/ocaml-vchan"
bug-reports: "https://github.com/mirage/ocaml-vchan/issues"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune"
  "vchan" {=version}
  "lwt" {>= "2.5.0"}
  "cstruct" {>= "1.9.0"}
  "ppx_sexp_conv"
  "ppx_cstruct"
  "io-page"
  "mirage-flow" {>= "2.0.0"}
  "xenstore" {>= "1.2.2"}
  "mirage-xen" {>= "6.0.0"}
  "xenstore_transport" {>= "1.0.0"}
  "sexplib"
  "cmdliner"
  "ounit" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/ocaml-vchan.git"
