opam-version: "2.0"
synopsis: "Xen Vchan implementation"
description: """
This is an implementation of the Xen "libvchan" or "vchan" communication
protocol in OCaml. It allows fast inter-domain communication using shared
memory.
"""
maintainer: "jonathan.ludlam@eu.citrix.com"
authors: ["Vincent Bernardoff" "Jon Ludlam" "David Scott"]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/ocaml-vchan"
doc: "https://mirage.github.io/ocaml-vchan"
bug-reports: "https://github.com/mirage/ocaml-vchan/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
  "lwt" {>= "2.5.0"}
  "cstruct" {>= "6.0.0"}
  "ppx_sexp_conv"
  "io-page"
  "mirage-flow" {>= "4.0.0"}
  "xenstore" {>= "1.2.2"}
  "xenstore_transport" {>= "1.0.0"}
  "sexplib"
  "cmdliner" {with-test}
  "ounit2" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-vchan.git"
